apps/privacy/proxitok/service-chromedriver.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxitok-chromedriver
  namespace: proxitok
spec:
  selector:
    app: proxitok-chromedriver
  ports:
  - port: 9515
    targetPort: 9515
    protocol: TCP
  type: ClusterIP
