apps/privacy/proxitok/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: proxitok-service
  namespace: proxitok
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: redis
      port: 6379
      targetPort: 6379
    - name: signer
      port: 8081
      targetPort: 8081
  selector:
    app: proxitok
